<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="10dip">

    <RelativeLayout
		android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp">
		<TextView android:id="@+id/tvUpgradedFileLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/tv_upgraded_file_path_label"
            android:layout_alignParentLeft="true"/>
        <TextView android:id="@+id/tvUpgradedFilePath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:ellipsize="start"
            android:textSize="20sp"
            android:layout_toRightOf="@id/tvUpgradedFileLabel"/>
    </RelativeLayout>
    
    <RelativeLayout
		android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp">
		<TextView android:id="@+id/tvRCMacLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/tv_rc_mac_label"
            android:layout_alignParentLeft="true"/>
        <TextView android:id="@+id/tvRCMac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:ellipsize="start"
            android:textSize="20sp"
            android:layout_toRightOf="@id/tvRCMacLabel"/>
    </RelativeLayout>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
		<Button
			android:id="@+id/button_start"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:minHeight="60dp"
			android:minWidth="120dp"
			android:text="@string/Button_start"/>
		<Button android:id="@+id/btnSelectUpgradedFile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="60dp"
			android:minWidth="120dp"
			android:text="@string/btn_select_upgraded_file"/>
		<Button
			android:id="@+id/button_clean"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:minHeight="60dp"
			android:minWidth="120dp"
			android:text="@string/Button_clean"/>
		<LinearLayout 
			android:layout_width="0dp" 
			android:layout_height="wrap_content"
			android:gravity="center_horizontal"
			android:layout_marginLeft="2dp"
			android:minHeight="60dp"
			android:minWidth="120dp"
			android:layout_weight="1">
			<ToggleButton
				android:id="@+id/tbVerboseLog"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:layout_weight="1"
				android:textOn="@string/tb_verbose_log_open"
				android:textOff="@string/tb_verbose_log_close"
				android:checked="false"/>
		</LinearLayout>
	</LinearLayout>
	
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
		<Button
			android:id="@+id/btnDevicePicker"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:minHeight="60dp"
			android:minWidth="120dp"
			android:text="@string/btn_device_picker"/>
		<Button android:id="@+id/btnConnect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="60dp"
			android:minWidth="120dp"
			android:text="@string/btn_connect"/>
		<Button android:id="@+id/btnDisconnect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="60dp"
			android:minWidth="120dp"
			android:text="@string/btn_disconnect"/>
	</LinearLayout>
	
	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

		<EditText
			android:id="@+id/editText_result"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_margin="15dp"
			android:gravity="top|left"
			android:layout_alignParentLeft="true"
			android:layout_alignParentRight="true"
			android:clickable="false"
			android:ems="10"
			android:focusable="false"
			android:inputType="textMultiLine"
			android:scrollbars="vertical">
			<requestFocus/>
		</EditText>
		<TextView android:id="@+id/tvResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:textSize="100sp"/>
	</RelativeLayout>
</LinearLayout>
